// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BillingComparisonPlanCard /> should not render plan as current plan 1`] = `
<div
  class="plan blueTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label label"
          for="basic-monthly-usd-442"
        >
          <input
            class="input"
            id="basic-monthly-usd-442"
            name="basic-monthly-usd-442"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-442"
            >
              Automation
            </span>
          </div>
        </label>
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
          >
            <b>
              $30
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            300
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Switch to Basic Plan"
      class="wrapper footerButton ghost primary medium"
      type="button"
    >
      Switch to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render current legacy plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <div
        class="badge"
      >
        CURRENT PLAN
      </div>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic Plan"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label label"
          for="basic-usd-142"
        >
          <input
            class="input"
            id="basic-usd-142"
            name="basic-usd-142"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-usd-142"
            >
              Automation
            </span>
          </div>
        </label>
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
          >
            <span
              class="fullAmount"
            >
              $30
            </span>
            <wbr />
            <b>
              $15
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            600
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_bike
          </i>
        </span>
        <span>
          <b>
            Lite
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="wrapper footerButton ghost primary medium isDisabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render current plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <div
        class="badge"
      >
        CURRENT PLAN
      </div>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label label"
          for="basic-monthly-usd-442"
        >
          <input
            class="input"
            id="basic-monthly-usd-442"
            name="basic-monthly-usd-442"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-442"
            >
              Automation
            </span>
          </div>
        </label>
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
          >
            <b>
              $30
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            300
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="wrapper footerButton ghost primary medium isDisabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render custom plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <div
        class="badge"
      >
        CURRENT PLAN
      </div>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Custom"
      >
        Custom
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $1,600
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="align-middle checkboxLabel"
      >
        <span
          id="automation-text-custom-monthly-usd-4-142"
        >
          Automation
        </span>
      </div>
      <div
        class="amountContainer"
      >
        <i />
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            10,000
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            150
          </b>
           Phone number
          s
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_car
          </i>
        </span>
        <span>
          <b>
            Full
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $1,600
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="wrapper footerButton ghost primary medium isDisabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render customLegacyPlan plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <div
        class="badge"
      >
        CURRENT PLAN
      </div>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Custom"
      >
        Custom
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $1,600
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="align-middle checkboxLabel"
      >
        Automation
      </div>
      <div
        class="amountContainer"
      >
        <i>
          Unavailable
        </i>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            10,000
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            150
          </b>
           Phone number
          s
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_car
          </i>
        </span>
        <span>
          <b>
            Full
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $1,600
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="wrapper footerButton ghost primary medium isDisabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render spinner when plan is updating 1`] = `
<div
  class="plan blueTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span
            class="amount"
          >
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label label"
          for="basic-monthly-usd-442"
        >
          <input
            class="input"
            id="basic-monthly-usd-442"
            name="basic-monthly-usd-442"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-442"
            >
              Automation
            </span>
          </div>
        </label>
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
          >
            <b>
              $30
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            300
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span
            class="amount"
          >
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Switch to Basic Plan"
      class="wrapper footerButton ghost primary medium isDisabled"
      disabled=""
      type="button"
    >
      <svg
        class="spinner gloom spinner"
        preserveAspectRatio="xMidYMid meet"
        role="status"
        viewBox="0 0 20 20"
        width="100%"
      >
        <circle
          class="dot"
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke-width="2"
        />
        <circle
          class="circle"
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke-width="2"
        />
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </svg>
      Switch to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render the automation plan features when the automation checkbox is checked 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      class="plan blueTheme card"
    >
      <div
        class="planHeader card-header"
      >
        <div
          class="headerText"
        >
          <div
            class="planName"
            title="Basic"
          >
            Basic
          </div>
          <span
            class="headerPrice"
          >
            <div
              class="amountWrapper"
            >
              <span
                class="amount"
              >
                $60
                 
                / 
                month
              </span>
            </div>
          </span>
        </div>
      </div>
      <div>
        <div
          class="automationRow"
        >
          <div
            class="checkbox"
          >
            <label
              class="label label"
              for="basic-monthly-usd-442"
            >
              <input
                checked=""
                class="input"
                id="basic-monthly-usd-442"
                name="basic-monthly-usd-442"
                type="checkbox"
              />
              <div
                class="align-middle checkboxLabel"
              >
                <span
                  id="automation-text-basic-monthly-usd-442"
                >
                  Automation
                </span>
              </div>
            </label>
          </div>
          <div
            class="amountContainer"
          >
            <div
              class="amountWrapper amount"
            >
              <span
                class="amount"
              >
                <b>
                  $30
                </b>
                 
                / 
                mo
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cardBody card-body"
      >
        <ul
          class="featureList"
        >
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                playlist_add_check
              </i>
            </span>
            <span>
              <span
                class="billableTickets"
                id="billable-ticket-label-42"
              >
                300
                 
                billable tickets
              </span>
               
              included
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                thumb_up
              </i>
            </span>
            <span>
              Facebook, Messenger, Instagram & DMs
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                forum
              </i>
            </span>
            <span>
              Live chat
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                phone
              </i>
            </span>
            <span>
              <b>
                1
              </b>
               Phone number
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                auto_awesome
              </i>
            </span>
            <span>
              Macros and rules
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                insert_emoticon
              </i>
            </span>
            <span>
              Satisfaction surveys
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                web_asset
              </i>
            </span>
            <span>
              <div>
                Unlimited
                 
                <span
                  class="underline"
                  id="help-center-label-42"
                >
                  Help centers
                </span>
              </div>
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                directions_walk
              </i>
            </span>
            <span>
              <b>
                Self
              </b>
               onboarding
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem disabledFeatureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                attach_money
              </i>
            </span>
            <span>
              Revenue statistics
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem disabledFeatureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon"
                style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
              />
            </span>
            <span>
              Magento integration
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem disabledFeatureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                person_pin
              </i>
            </span>
            <span>
              Dedicated success manager
            </span>
          </li>
          <li
            class="d-flex align-items-center featureListItem disabledFeatureListItem"
          >
            <span
              class="featureIcon mr-3"
            >
              <i
                class="icon material-icons"
              >
                blur_on
              </i>
            </span>
            <span>
              Custom services
            </span>
          </li>
        </ul>
      </div>
      <div
        class="cardFooter card-footer"
      >
        <div
          class="row"
        >
          <div>
            Total
          </div>
          <div
            class="amountContainer"
          >
            <div
              class="amountWrapper amount"
            >
              <span
                class="amount"
              >
                <b>
                  $90
                </b>
                 
                / 
                month
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="Upgrade to Basic Plan"
          class="wrapper footerButton ghost primary medium"
          type="button"
        >
          Upgrade to Basic Plan
        </button>
      </div>
    </div>
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                We're happy to see you grow 👏
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="p-0 modal-body"
            >
              <div
                class="m-3"
              >
                Our Basic plan is perfect for small businesses: centralize all your customer conversations, connect your Shopify instantly and add a Live Chat! Questions?
                 
                <a
                  href="mailto:undefined"
                >
                  <b>
                    Get in touch!
                  </b>
                </a>
              </div>
              <div
                class="m-3 flex justify-content-between"
              >
                <div
                  class="plan greyTheme plan card"
                >
                  <div
                    class="planHeader card-header"
                  >
                    <div>
                      <div
                        class="badge"
                      >
                        CURRENT PLAN
                      </div>
                    </div>
                    <div
                      class="headerText"
                    >
                      <div
                        class="planName"
                        title="Pro"
                      >
                        Pro
                      </div>
                      <span
                        class="headerPrice"
                      >
                        <div
                          class="amountWrapper"
                        >
                          <span
                            class="amount"
                          >
                            $360
                             
                            / 
                            month
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                  <div
                    class="cardBody card-body"
                  >
                    <div
                      class="container"
                      style="height: 280px;"
                    >
                      <div
                        style="height: auto;"
                      >
                        <ul
                          class="featureList"
                        >
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                playlist_add_check
                              </i>
                            </span>
                            <span>
                              <span
                                class="billableTickets"
                                id="billable-ticket-label-42"
                              >
                                2,000
                                 
                                billable tickets
                              </span>
                               
                              included
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                thumb_up
                              </i>
                            </span>
                            <span>
                              Facebook, Messenger, Instagram & DMs
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                forum
                              </i>
                            </span>
                            <span>
                              Live chat
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                phone
                              </i>
                            </span>
                            <span>
                              <b>
                                3
                              </b>
                               Phone number
                              s
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                auto_awesome
                              </i>
                            </span>
                            <span>
                              Macros and rules
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                insert_emoticon
                              </i>
                            </span>
                            <span>
                              Satisfaction surveys
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                web_asset
                              </i>
                            </span>
                            <span>
                              <div>
                                Unlimited
                                 
                                <span
                                  class="underline"
                                  id="help-center-label-42"
                                >
                                  Help centers
                                </span>
                              </div>
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                directions_bike
                              </i>
                            </span>
                            <span>
                              <b>
                                Lite
                              </b>
                               onboarding
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                attach_money
                              </i>
                            </span>
                            <span>
                              Revenue statistics
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon"
                                style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
                              />
                            </span>
                            <span>
                              Magento integration
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                person_pin
                              </i>
                            </span>
                            <span>
                              Dedicated success manager
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                blur_on
                              </i>
                            </span>
                            <span>
                              Custom services
                            </span>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cardFooter card-footer"
                  >
                    <div
                      class="automationRow"
                    >
                      <div
                        class="checkbox"
                      >
                        <label
                          class="label label"
                          for="pro-monthly-usd-442"
                        >
                          <input
                            class="input"
                            id="pro-monthly-usd-442"
                            name="pro-monthly-usd-442"
                            readonly=""
                            type="checkbox"
                          />
                          <div
                            class="align-middle checkboxLabel"
                          >
                            <span
                              id="automation-text-pro-monthly-usd-442"
                            >
                              Automation
                            </span>
                          </div>
                        </label>
                      </div>
                      <div
                        class="amountContainer"
                      >
                        <div
                          class="amountWrapper amount amountDisabled"
                        >
                          <span
                            class="amount"
                          >
                            <b>
                              $180
                            </b>
                             
                            / 
                            month
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div>
                        Total
                      </div>
                      <div
                        class="amountContainer"
                      >
                        <div
                          class="amountWrapper amount"
                        >
                          <span
                            class="amount"
                          >
                            <b>
                              $360
                            </b>
                             
                            / 
                            month
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <img
                  alt="arrow-icon"
                  src="test-file-stub"
                />
                <div
                  class="plan blueTheme plan card"
                >
                  <div
                    class="planHeader card-header"
                  >
                    <div
                      class="headerText"
                    >
                      <div
                        class="planName"
                        title="Basic"
                      >
                        Basic
                      </div>
                      <span
                        class="headerPrice"
                      >
                        <div
                          class="amountWrapper"
                        >
                          <span
                            class="amount"
                          >
                            $60
                             
                            / 
                            month
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                  <div
                    class="cardBody card-body"
                  >
                    <div
                      class="container"
                      style="height: 280px;"
                    >
                      <div
                        style="height: auto;"
                      >
                        <ul
                          class="featureList"
                        >
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                playlist_add_check
                              </i>
                            </span>
                            <span>
                              <span
                                class="billableTickets"
                                id="billable-ticket-label-42"
                              >
                                300
                                 
                                billable tickets
                              </span>
                               
                              included
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                thumb_up
                              </i>
                            </span>
                            <span>
                              Facebook, Messenger, Instagram & DMs
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                forum
                              </i>
                            </span>
                            <span>
                              Live chat
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                phone
                              </i>
                            </span>
                            <span>
                              <b>
                                1
                              </b>
                               Phone number
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                auto_awesome
                              </i>
                            </span>
                            <span>
                              Macros and rules
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                insert_emoticon
                              </i>
                            </span>
                            <span>
                              Satisfaction surveys
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                web_asset
                              </i>
                            </span>
                            <span>
                              <div>
                                Unlimited
                                 
                                <span
                                  class="underline"
                                  id="help-center-label-42"
                                >
                                  Help centers
                                </span>
                              </div>
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                directions_walk
                              </i>
                            </span>
                            <span>
                              <b>
                                Self
                              </b>
                               onboarding
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                attach_money
                              </i>
                            </span>
                            <span>
                              Revenue statistics
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon"
                                style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
                              />
                            </span>
                            <span>
                              Magento integration
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                person_pin
                              </i>
                            </span>
                            <span>
                              Dedicated success manager
                            </span>
                          </li>
                          <li
                            class="d-flex align-items-center featureListItem disabledFeatureListItem"
                          >
                            <span
                              class="featureIcon mr-3"
                            >
                              <i
                                class="icon material-icons"
                              >
                                blur_on
                              </i>
                            </span>
                            <span>
                              Custom services
                            </span>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                  <div
                    class="cardFooter card-footer"
                  >
                    <div
                      class="automationRow"
                    >
                      <div
                        class="checkbox"
                      >
                        <label
                          class="label label"
                          for="basic-monthly-usd-442"
                        >
                          <input
                            checked=""
                            class="input"
                            id="basic-monthly-usd-442"
                            name="basic-monthly-usd-442"
                            type="checkbox"
                          />
                          <div
                            class="align-middle checkboxLabel"
                          >
                            <span
                              id="automation-text-basic-monthly-usd-442"
                            >
                              Automation
                            </span>
                          </div>
                        </label>
                      </div>
                      <div
                        class="amountContainer"
                      >
                        <div
                          class="amountWrapper amount"
                        >
                          <span
                            class="amount"
                          >
                            <b>
                              $30
                            </b>
                             
                            / 
                            month
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div>
                        Total
                      </div>
                      <div
                        class="amountContainer"
                      >
                        <div
                          class="amountWrapper amount"
                        >
                          <span
                            class="amount"
                          >
                            <b>
                              $90
                            </b>
                             
                            / 
                            month
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Confirm
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
